ncep/gov.noaa.nws.ncep.ui.nsharp/BigNsharp/Sndglib/thermo.h

void drylift(float p1, float t1, float td1, float *p2, float *t2);
float wetlift(float pres, float temp, float pres2);
float wetbulb(float pres, float temp, float dwpt);
float thetae(float pres, float temp, float dwpt);
float virtemp(float pres, float temp, float dwpt);