ncep/gov.noaa.nws.ncep.ui.nsharp/src/gov/noaa/nws/ncep/ui/nsharp/natives/NsharpNative.java

    	
    	//From our own caveNsharp.c
     	void populateSndgData(NsharpLibrary.CaveSndgParms snDataArray[], int arraySize, float winDir, float winSpd);   	
    	void get_lpvaluesData(NsharpLibrary._lplvalues pParcel);
    	void populateSndgTestData() ;
     	void get_surface(FloatByReference pressure, FloatByReference temp, FloatByReference  dewpt);
     	void get_surfaceWind(FloatByReference windSp, FloatByReference windDir);
     	//void get_top(FloatByReference pressure, FloatByReference temp, FloatByReference dewpt);
     	void get_storm(FloatByReference speed, FloatByReference direction);
     	void set_storm(float speed, float  direction);
     	void cave_visual1 ( float lower, float upper, float pres, float temp, float dwpt , NsharpLibrary.StormSlinkyStr stmSlinky);
     	float cave_bulk_rich ( float lplpres, float bplus,FloatByReference brnshear );
     	//void printSfcInfo();
     	//void showSndgData();
     	//From basic.h
    	
    	float i_temp(float pres);
    	
    	float i_dwpt(float pres);
    	
     	float i_hght(float pres);
    	
    	float i_vtmp(float pres);
    	
    	float i_wdir(float pres);
    	
     	float i_wspd(float pres);
    	
    	float i_wndu(float pres);
    	
    	float i_wndv(float pres);
    	
    	float i_pres(float hght);
    	
    	float i_omeg(float pres);
    	
     	int sfc();
    	
    	float top_pres();
    	
    	int qc(float value);
    	
    	@java.lang.Deprecated 
    	Pointer qc2(float value, Pointer label, short prec);
    	
    	Pointer qc2(float value, ByteBuffer label, short prec);
    	
    	float ftom(float value);
    	
    	float mtof(float value);
    	
    	float ftoc(float value);
    	
    	float ctof(float value);
    	
    	float agl(float height);
    	
    	float msl(float height);
    	
    	float kt_to_mps(float spd);
    	
    	float virtemp(float pres, float temp, float dwpt);
    	
    	//*
    	 //* from skparams.h
    	 //
    	
    	//@Mangling({"_Z9bulk_rich7_parcelPf", "?bulk_rich@@YAM7_parcelPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float bulk_rich(NsharpLibrary._parcel.ByValue pcl, FloatByReference brnshear);
    	
    	//@Mangling({"_Z10cnvtv_tempPff", "?cnvtv_temp@@YAMPAMM@Z"}) 
    	//@java.lang.Deprecated 
    	float cnvtv_temp(FloatByReference param, float mincinh);
    	
    	/*flag   -   Parcel selection.                             */
    	/*            -1 = Use Previous Selection                    */
    	/*             1 = Observed sfc parcel                       */
    	/*             2 = Fcst sfc parcel                           */
    	/*             3 = Mean mixlyr parcel                        */
    	/*             4 = Most unstable parcel                      */
    	/*             5 = User defined parcel                       */
    	/*                                                           */
    	/*  pres   -   Pressure(mb) of user defined parcel.   		*/
    	/*
    	void define_parcel(short flag, float pres);
    	
    	//@Mangling({"_Z7delta_tPf", "?delta_t@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float delta_t(FloatByReference param);
    	
    	//@Mangling({"_Z3ehiff", "?ehi@@YAMMM@Z"}) 
    	float ehi(float cape, float hel);
    	
    	//@Mangling({"_Z10grab_levelf", "?grab_level@@YAXM@Z"}) 
    	int grab_level(float pres);
    	
    	//@Mangling({"_Z7k_indexPf", "?k_index@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float k_index(FloatByReference param);
    	
    	//@Mangling({"_Z10lapse_ratePfff", "?lapse_rate@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float lapse_rate(FloatByReference param, float lower, float upper);
    	
    	//@Mangling({"_Z7low_invPfPf", "?low_inv@@YAXPAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	void low_inv(FloatByReference inv_mb, FloatByReference inv_dC);
     	
    	//@Mangling({"_Z8max_tempPff", "?max_temp@@YAMPAMM@Z"}) 
    	//@java.lang.Deprecated 
    	float max_temp(FloatByReference param, float mixlyr);
    	
    	//@Mangling({"_Z9mean_dwptPfff", "?mean_dwpt@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_dwpt(FloatByReference param, float lower, float upper);
    	
    	//@Mangling({"_Z13mean_mixratioPfff", "?mean_mixratio@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_mixratio(FloatByReference param, float lower, float upper);
   	
    	//@Mangling({"_Z11mean_relhumPfff", "?mean_relhum@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_relhum(FloatByReference param, float lower, float upper);
     	
    	//@Mangling({"_Z10mean_thetaPfff", "?mean_theta@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_theta(FloatByReference param, float lower, float upper);
    	
    	//@Mangling({"_Z11Mean_WBtempPfff", "?Mean_WBtemp@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float Mean_WBtemp(FloatByReference param, float lower, float upper);
     	
    	//@Mangling({"_Z10mix_heightPfPfPfPfPfPfPfi", "?mix_height@@YAXPAMPAMPAMPAMPAMPAMPAMH@Z"}) 
    	//@java.lang.Deprecated 
    	void mix_height(FloatByReference mh_mb, FloatByReference mh_drct, FloatByReference mh_sped, FloatByReference mh_dC, FloatByReference mh_lr, FloatByReference mh_drct_max, FloatByReference mh_sped_max, short flag);
    	
    	//@Mangling({"_Z14old_cnvtv_tempPf", "?old_cnvtv_temp@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float old_cnvtv_temp(FloatByReference param);
    	
    	//@Mangling({"_Z6parcelfffffP7_parcel", "?parcel@@YAMMMMMMPA7_parcel@Z"}) 
    	float parcel(float lower, float upper, float pres, float temp, float dwpt, NsharpLibrary._parcel pcl);
    	
    	//@Mangling({"_Z7parcelxfffffP7_parcel", "?parcelx@@YAMMMMMMPA7_parcel@Z"}) 
    	float parcelx(float lower, float upper, float pres, float temp, float dwpt, NsharpLibrary._parcel pcl);
    	
    	//@Mangling({"_Z12precip_waterPfff", "?precip_water@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float precip_water(FloatByReference param, float lower, float upper);
    	
    	//@Mangling({"_Z10Rogash_QPFPf", "?Rogash_QPF@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float Rogash_QPF(FloatByReference param);
     	
    	//@Mangling({"_Z11sweat_indexPf", "?sweat_index@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float sweat_index(FloatByReference param);
    	
    	//@Mangling({"_Z8temp_lvlfPf", "?temp_lvl@@YAMMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float temp_lvl(float temp, FloatByReference param);
     	
    	//@Mangling({"_Z11ThetaE_diffPf", "?ThetaE_diff@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float ThetaE_diff(FloatByReference param);
     	
    	//@Mangling({"_Z12top_moistlyrPf", "?top_moistlyr@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float top_moistlyr(FloatByReference param);
     	
    	//@Mangling({"_Z8t_totalsPfPfPf", "?t_totals@@YAMPAMPAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float t_totals(FloatByReference param, FloatByReference ct, FloatByReference vt);
     	
    	//@Mangling({"_Z10unstbl_lvlPfff", "?unstbl_lvl@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float unstbl_lvl(FloatByReference param, float lower, float upper);
     	
    	//@Mangling({"_Z8vert_totPf", "?vert_tot@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float vert_tot(FloatByReference param);
    	
    	//@Mangling({"_Z6wb_lvlfPf", "?wb_lvl@@YAMMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float wb_lvl(float temp, FloatByReference param);
     	
    	//from wind.h
    	float helicity ( float lower, float upper, float sdir, float sspd,
    			FloatByReference phel, FloatByReference nhel );
    	void sr_wind ( float pbot, float ptop, float stdir, float stspd,
    			FloatByReference mnu, FloatByReference mnv, FloatByReference wdir, FloatByReference wspd );
    	void mean_wind ( float pbot, float ptop, FloatByReference mnu, FloatByReference mnv,
    			FloatByReference wdir, FloatByReference wspd );
    	void wind_shear ( float pbot, float ptop, FloatByReference shu, FloatByReference shv,
    			FloatByReference sdir, FloatByReference smag );
    	float ucomp( float wdir, float wspd );
    	float vcomp( float wdir, float wspd );
	
    	//from thermo.h
    	float thetae ( float pres, float temp, float dwpt );
    	void drylift ( float p1, float t1, float td1, FloatByReference p2, FloatByReference t2 );
    	float wetlift ( float pres, float temp, float pres2 );
    	float wetbulb ( float pres, float temp, float dwpt );
    	//from xwvid.c
    	short vert_coords ( float hgt, float maxhgt );
    } */
	
}
